--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="col-xs-2"></div>
 <div class="col-xs-8">
-  <h2>Sign up</h2>
+  <h2>Create your account for free</h2>
 
   <div class="sign_up">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
