--- a/app/views/listings/new.html.haml
+++ b/app/views/listings/new.html.haml
@@ -18,4 +18,4 @@
         = f.text_field :title, class: 'form-control'
       .form-group
         = f.label :category_id, class: 'form-label required'
-        = f.collection_select :category_id, Category.all, :id, :name, {}, {class: 'form-control'}
+      -#   = f.collection_select :category_id, Category.all, :id, :name, {}, {class: 'form-control'}
