--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,14 +13,12 @@
 
       <div class="field fieldText">
         <%= f.label :first_name %><br />
-        <!-- change the next line  -->
-        <%= f.email_field :email%>
+        <%= f.text_field :first_name%>
       </div>
 
       <div class="field fieldText">
         <%= f.label :last_name %><br />
-        <!-- change the next line -->
-        <%= f.email_field :email%>
+        <%= f.text_field :last_name%>
       </div>
 
       <div class="field fieldText">
