--- a/app/views/listings/new.html.haml
+++ b/app/views/listings/new.html.haml
@@ -24,7 +24,7 @@
       -#   = f.text_field :description, class: 'form-control'
       -# .form-group
       -#   = f.label :picture, class: 'form-label required'
-      -#   = f.text_field :picture, class: 'form-control'
+      -#   = f.file_field :picture, class: 'form-control'
       -# .form-group
       -#   = f.label :price, class: 'form-label required'
       -#   = f.text_field :price, class: 'form-control'
