--- a/app/views/listings/new.html.haml
+++ b/app/views/listings/new.html.haml
@@ -16,18 +16,18 @@
       .form-group
         = f.label :title, class: 'form-label required'
         = f.text_field :title, class: 'form-control'
-      .form-group
-        = f.label :category_id, class: 'form-label required'
+      -# .form-group
+      -#   = f.label :category_id, class: 'form-label required'
       -#   = f.collection_select :category_id, Category.all, :id, :name, {}, {class: 'form-control'}
-      -# .form-group
-      -#   = f.label :description, class: 'form-label required'
-      -#   = f.text_field :description, class: 'form-control'
-      -# .form-group
-      -#   = f.label :picture, class: 'form-label required'
-      -#   = f.file_field :picture, class: 'form-control'
-      -# .form-group
-      -#   = f.label :price, class: 'form-label required'
-      -#   = f.text_field :price, class: 'form-control'
+      .form-group
+        = f.label :description, class: 'form-label required'
+        = f.text_field :description, class: 'form-control'
+      .form-group
+        = f.label :picture, class: 'form-label required'
+        = f.file_field :picture, class: 'form-control'
+      .form-group
+        = f.label :price, class: 'form-label required'
+        = f.text_field :price, class: 'form-control'
 
       .form-group
         %span= t('required_field')
