--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
     <div class='top'>
       <div class='col-xs-2'><h1 class='title'><a href='<%= root_path %>'>Listings</a></h1></div>
       <div class='col-xs-10 pull-right'>
-        <a href="" class="btn btn-success pull-right"><%= t('create_listing') %></a>
+        <a href="/listings/new" class="btn btn-success pull-right"><%= t('create_listing') %></a>
         <select class="form-control pull-right language" data-do='setLocale'>
           <% I18n.available_locales.each do |loc| %>
             <option value="<%= url_for(locale:loc.to_s) %>"
