--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -103,6 +103,11 @@ form.busy {
   h3 {
     font-size: 40px;
   }
+  a{
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
   p{
     color: #000;
     margin-top: 10px;
