Change root-path home link

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,7 +3,7 @@
     .top
       .col-xs-2
         %h1.title
-          %a{:href => "root_path"}
+          %a{href: root_path}
             = 'Listings'
       .col-xs-10.pull-right
         %a{href: new_listing_path ,class:'btn btn-success pull-right'}
