--- a/app/views/homepage/index.html.haml
+++ b/app/views/homepage/index.html.haml
@@ -1,5 +1,7 @@
 .row
   .col-xs-8.col-xs-offset-2.search
     %h2= t('main_baseline')
-
-
+    .input-group
+      %input{type: 'text', class: 'form-control', placeholder: t('search_placeholder')}
+      %span{class: 'input-group-btn'}
+        %button{class: 'btn btn-success', type: 'button'}= t('search')
