Add user test and other modif

--- a/app/views/listings/index.html.haml
+++ b/app/views/listings/index.html.haml
@@ -2,8 +2,7 @@
   .col-xs-12.listing
     %h3= element.title
     %span.date= element.created_at
-    -# %span.category= element.category_id
-    %span.category= 'exemple'
+    %span.category= element.category_id
     %br/
     .row
       .col-xs-2
