--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -153,7 +153,7 @@ form.busy {
 }
 .footer {
   text-align: center;
-  border-top: 1px solid #000;
+  // border-top: 1px solid #000;
   padding-top: 10px;
   margin-top: 200px;
 }
@@ -164,11 +164,12 @@ form.busy {
   display: inline-block;
   border-left: 1px solid #000;
   padding-left: 10px;
+  color: white;
   &:first-child {
     border-left: 0;
   }
 }
 .footer li a{
-  color: #000;
+  color: #fff;
   margin-right: 10px;
 }
