Add my_account + send message

--- a/app/views/layouts/account.html.haml
+++ b/app/views/layouts/account.html.haml
@@ -12,7 +12,7 @@
   %body{:class => "#{params[:controller]}"}
     .header
       = render partial: '/shared/header'
-    .row
+    .container.content
       = render partial: '/account/shared/nav'
     %br/
     .container
