Add category in listing

--- a/app/views/listings/index.html.haml
+++ b/app/views/listings/index.html.haml
@@ -2,7 +2,7 @@
   .col-xs-12.listing
     %h3= element.title
     %span.date= element.created_at
-    %span.category= element.category_id
+    %span.category= element.category.name
     %br/
     .row
       .col-xs-2
